# School-Management-System

./: CMakeLists - Copy.txt  CMakeLists.txt  Entity.cpp  Entity.h  Icons.qrc  LICENSE  README.md  Resources.qrc  addcourse.cpp  addcourse.h  addcourse.ui  addgroup.cpp  addgroup.h  addgroup.ui  addstudent.cpp  addstudent.h  addstudent.ui  adminer.cpp  adminer.h  adminer.ui  changestudentgroup.cpp  changestudentgroup.h  changestudentgroup.ui  courseeditor.cpp  courseeditor.h  courseeditor.ui  departement.cpp  displayer.cpp  displayer.h  displayer.ui  groupeditor.cpp  groupeditor.h  groupeditor.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  recyclebin.cpp  recyclebin.h  recyclebin.ui  (+17 more)
Database/: SchoolManagmentDatabase.db  SchoolManagmentDatabase.sqbpro
resources for SMS/: desktop.ini
